--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Card login Demo</title>
 </head>
 <body>
     <div class="centercard">
-       <img src="/hexagon.jpg">
+       <img src="hexagon.jpg">
        <h2>Create Account</h2>
        <form>
            <div>
